--- a/infra/k3s-cluster/ansible/site.yml
+++ b/infra/k3s-cluster/ansible/site.yml
@@ -31,24 +31,11 @@
   roles:
     - role: k3s/node
 
-# Replace the K3s included Traefik manifest
-#- hosts: master
-#  become: yes
-#  tasks:
-#  - name: Copy Traefik manifest
-#    copy:
-#      src: '../k3s/traefik.yaml'
-#      dest: '/var/lib/rancher/k3s/server/manifests/traefik.yaml'
-#  - name: Restart K3s service
-#    systemd:
-#      name: k3s
-#      daemon_reload: yes
-#      state: restarted
-#      enabled: yes
-
 # Bootstrap cluster with
 # Longhorn: distributed storage
 # MetalLB: BGP advertisement with router
+# Traefik as IngressController
+
 - hosts: localhost
   tasks:
   - name: Create MetalLB Namespace
@@ -74,3 +61,7 @@
       state: present
       src: '../k3s/longhorn-install.yaml'
 
+  - name: Install Traefik
+    k8s:
+      state: present
+      src: '../k3s/traefik.yaml'
