Add Minio secret
This is not exposed outside of the LAN so no need to encrypt
these yet.

--- a/infra/k3s-cluster/ansible/site.yml
+++ b/infra/k3s-cluster/ansible/site.yml
@@ -65,3 +65,8 @@
     k8s:
       state: present
       src: '../k3s/traefik.yaml'
+
+  - name: Add Minio secret
+    k8s:
+      state: present
+      src: '../k3s/minio-secret.yaml'
